--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "grunt-contrib-jshint": "~0.11.2",
     "grunt-contrib-uglify": "~0.9.1",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-jekyll": "~0.4.2",
+    "grunt-jekyll": "^0.4.3",
     "grunt-sass": "^1.0.0",
     "grunt-svgmin": "^2.0.1"
   },
